[package]
name = "aleo_python"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "aleo_python"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.17.3", features = ["extension-module"] }
json = "*"

[dependencies.snarkvm]
version = "0.9.0"

[dependencies.snarkvm-console]
version = "0.9.0"

[dependencies.rand]
version = "0.8"
default-features = false

[dependencies.rand_chacha]
version = "0.3.0"
default-features = false

[dependencies.snarkvm-utilities]
version = "0.9.0"